[gd_scene load_steps=3 format=3 uid="uid://e1b28cf47r24"]

[ext_resource type="Script" path="res://Scenes/gear_workspace.gd" id="1_h0jah"]
[ext_resource type="Theme" uid="uid://dru2g57dtidcb" path="res://Themes/default_grid.tres" id="2_e8uob"]

[node name="GearWorkspace" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1024.0
offset_bottom = -257.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_h0jah")

[node name="NewGearButton" type="Button" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 0
text = "Generate new gear"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GridContainer2" type="GridContainer" parent="HBoxContainer2/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_e8uob")
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 9

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="GridContainer" type="VBoxContainer" parent="HBoxContainer2/VBoxContainer/ScrollContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_e8uob")

[node name="DataHBox" type="HBoxContainer" parent="HBoxContainer2/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_e8uob")
theme_override_constants/separation = 0

[node name="GearForm" type="GridContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="Label" type="Label" parent="HBoxContainer2/GearForm"]
layout_mode = 2
theme_override_colors/font_color = Color(0.458405, 0.458405, 0.458405, 1)
text = "ID"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer2/GearForm"]
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="Label2" type="Label" parent="HBoxContainer2/GearForm"]
layout_mode = 2
text = "Brand"

[node name="LineEdit2" type="LineEdit" parent="HBoxContainer2/GearForm"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="HBoxContainer2/GearForm"]
layout_mode = 2
text = "Model"

[node name="LineEdit3" type="LineEdit" parent="HBoxContainer2/GearForm"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label4" type="Label" parent="HBoxContainer2/GearForm"]
layout_mode = 2
text = "Cost"

[node name="LineEdit4" type="LineEdit" parent="HBoxContainer2/GearForm"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label5" type="Label" parent="HBoxContainer2/GearForm"]
layout_mode = 2
text = "Quantity"

[node name="LineEdit5" type="LineEdit" parent="HBoxContainer2/GearForm"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label6" type="Label" parent="HBoxContainer2/GearForm"]
layout_mode = 2
text = "Department"

[node name="LineEdit6" type="OptionButton" parent="HBoxContainer2/GearForm"]
layout_mode = 2

[node name="Label7" type="Label" parent="HBoxContainer2/GearForm"]
layout_mode = 2
text = "Category"

[node name="LineEdit7" type="OptionButton" parent="HBoxContainer2/GearForm"]
layout_mode = 2

[node name="Label8" type="Label" parent="HBoxContainer2/GearForm"]
layout_mode = 2
text = "Need loading"

[node name="LineEdit8" type="CheckBox" parent="HBoxContainer2/GearForm"]
layout_mode = 2

[node name="Label9" type="Label" parent="HBoxContainer2/GearForm"]
visible = false
layout_mode = 2
text = "User"

[node name="LineEdit9" type="OptionButton" parent="HBoxContainer2/GearForm"]
visible = false
layout_mode = 2

[node name="Label10" type="Label" parent="HBoxContainer2/GearForm"]
layout_mode = 2
text = "Comment"

[node name="LineEdit10" type="LineEdit" parent="HBoxContainer2/GearForm"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="HBoxContainer2/GearForm"]
layout_mode = 2
text = "Save Gear"

[node name="Label11" type="Label" parent="HBoxContainer2/GearForm"]
layout_mode = 2

[node name="Button2" type="Button" parent="HBoxContainer2/GearForm"]
layout_mode = 2
text = "Generate Template #1"

[node name="Label12" type="Label" parent="HBoxContainer2/GearForm"]
layout_mode = 2

[node name="Button3" type="Button" parent="HBoxContainer2/GearForm"]
layout_mode = 2
text = "Generate Template #2"

[node name="Label13" type="Label" parent="HBoxContainer2/GearForm"]
layout_mode = 2

[node name="Button4" type="Button" parent="HBoxContainer2/GearForm"]
layout_mode = 2
text = "Generate Template #3"
